src/Jorginho/interpreter/Parser/LLVMParser.java
package Jorginho.interpreter.Parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LLVMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Assign=1, LBracket=2, RBracket=3, LBrace=4, RBrace=5, LParen=6, RParen=7, 
		Colon=8, Comma=9, Semi=10, DoubleQuote=11, EndString=12, Type=13, Declare=14, 
		Define=15, Source_filename=16, Target=17, Triple=18, Datalayout=19, I=20, 
		Ptr=21, Void=22, X=23, True=24, False=25, C=26, Null=27, RegName=28, GlobalName=29, 
		Add=30, Sub=31, Mul=32, SDiv=33, SRem=34, And=35, Or=36, Xor=37, Shl=38, 
		AShr=39, Eq=40, Ne=41, Slt=42, Sgt=43, Sle=44, Sge=45, Ult=46, Ugt=47, 
		Ule=48, Uge=49, Private=50, Unnamed_addr=51, Local_unnamed_addr=52, Global=53, 
		Constant=54, Dso_preemptable=55, Dso_local=56, Alloca=57, Load=58, Store=59, 
		Br=60, Icmp=61, Getelementptr=62, Phi=63, Call=64, Ret=65, Zext=66, Trunc=67, 
		To=68, Label=69, StringLiteral=70, IntType=71, IntLiteral=72, Identifier=73, 
		WhiteSpace=74, Comment=75, StringData=76;
	public static final int
		RULE_program = 0, RULE_funcDecl = 1, RULE_gVarDecl = 2, RULE_funcDef = 3, 
		RULE_classDecl = 4, RULE_targetInfo = 5, RULE_sourceFn = 6, RULE_dataLayout = 7, 
		RULE_targetTriple = 8, RULE_basicBlock = 9, RULE_entity = 10, RULE_register = 11, 
		RULE_type = 12, RULE_intType = 13, RULE_ptrType = 14, RULE_voidType = 15, 
		RULE_stringType = 16, RULE_intConst = 17, RULE_boolConst = 18, RULE_stringConst = 19, 
		RULE_nullConst = 20, RULE_reg = 21, RULE_gVar = 22, RULE_destAssign = 23, 
		RULE_binOp = 24, RULE_icmpOp = 25, RULE_gepIndex = 26, RULE_phiPart = 27, 
		RULE_accessType = 28, RULE_unnamedAddr = 29, RULE_globalHead = 30, RULE_preemptions = 31, 
		RULE_instruction = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "funcDecl", "gVarDecl", "funcDef", "classDecl", "targetInfo", 
			"sourceFn", "dataLayout", "targetTriple", "basicBlock", "entity", "register", 
			"type", "intType", "ptrType", "voidType", "stringType", "intConst", "boolConst", 
			"stringConst", "nullConst", "reg", "gVar", "destAssign", "binOp", "icmpOp", 
			"gepIndex", "phiPart", "accessType", "unnamedAddr", "globalHead", "preemptions", 
			"instruction"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'['", "']'", "'{'", "'}'", "'('", "')'", "':'", "','", 
			"';'", "'\"'", "'\\00'", "'type'", "'declare'", "'define'", "'source_filename'", 
			"'target'", "'triple'", "'datalayout'", "'i'", "'ptr'", "'void'", "'x'", 
			"'true'", "'false'", "'c'", "'null'", "'%'", "'@'", "'add'", "'sub'", 
			"'mul'", "'sdiv'", "'srem'", "'and'", "'or'", "'xor'", "'shl'", "'ashr'", 
			"'eq'", "'ne'", "'slt'", "'sgt'", "'sle'", "'sge'", "'ult'", "'ugt'", 
			"'ule'", "'uge'", "'private'", "'unnamed_addr'", "'local_unnamed_addr'", 
			"'global'", "'constant'", "'dso_preemptable'", "'dso_local'", "'alloca'", 
			"'load'", "'store'", "'br'", "'icmp'", "'getelementptr'", "'phi'", "'call'", 
			"'ret'", "'zext'", "'trunc'", "'to'", "'label'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Assign", "LBracket", "RBracket", "LBrace", "RBrace", "LParen", 
			"RParen", "Colon", "Comma", "Semi", "DoubleQuote", "EndString", "Type", 
			"Declare", "Define", "Source_filename", "Target", "Triple", "Datalayout", 
			"I", "Ptr", "Void", "X", "True", "False", "C", "Null", "RegName", "GlobalName", 
			"Add", "Sub", "Mul", "SDiv", "SRem", "And", "Or", "Xor", "Shl", "AShr", 
			"Eq", "Ne", "Slt", "Sgt", "Sle", "Sge", "Ult", "Ugt", "Ule", "Uge", "Private", 
			"Unnamed_addr", "Local_unnamed_addr", "Global", "Constant", "Dso_preemptable", 
			"Dso_local", "Alloca", "Load", "Store", "Br", "Icmp", "Getelementptr", 
			"Phi", "Call", "Ret", "Zext", "Trunc", "To", "Label", "StringLiteral", 
			"IntType", "IntLiteral", "Identifier", "WhiteSpace", "Comment", "StringData"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LLVMParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LLVMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(LLVMParser.EOF, 0); }
		public List<FuncDeclContext> funcDecl() {
			return getRuleContexts(FuncDeclContext.class);
		}
		public FuncDeclContext funcDecl(int i) {
			return getRuleContext(FuncDeclContext.class,i);
		}
		public List<GVarDeclContext> gVarDecl() {
			return getRuleContexts(GVarDeclContext.class);
		}
		public GVarDeclContext gVarDecl(int i) {
			return getRuleContext(GVarDeclContext.class,i);
		}
		public List<FuncDefContext> funcDef() {
			return getRuleContexts(FuncDefContext.class);
		}
		public FuncDefContext funcDef(int i) {
			return getRuleContext(FuncDefContext.class,i);
		}
		public List<ClassDeclContext> classDecl() {
			return getRuleContexts(ClassDeclContext.class);
		}
		public ClassDeclContext classDecl(int i) {
			return getRuleContext(ClassDeclContext.class,i);
		}
		public List<TargetInfoContext> targetInfo() {
			return getRuleContexts(TargetInfoContext.class);
		}
		public TargetInfoContext targetInfo(int i) {
			return getRuleContext(TargetInfoContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMParserListener ) ((LLVMParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMParserListener ) ((LLVMParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLVMParserVisitor ) return ((LLVMParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 805552128L) != 0)) {
				{
				setState(71);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Declare:
					{
					setState(66);
					funcDecl();
					}
					break;
				case GlobalName:
					{
					setState(67);
					gVarDecl();
					}
					break;
				case Define:
					{
					setState(68);
					funcDef();
					}
					break;
				case RegName:
					{
					setState(69);
					classDecl();
					}
					break;
				case Source_filename:
				case Target:
					{
					setState(70);
					targetInfo();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncDeclContext extends ParserRuleContext {
		public TerminalNode Declare() { return getToken(LLVMParser.Declare, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public GVarContext gVar() {
			return getRuleContext(GVarContext.class,0);
		}
		public TerminalNode LParen() { return getToken(LLVMParser.LParen, 0); }
		public TerminalNode RParen() { return getToken(LLVMParser.RParen, 0); }
		public List<TerminalNode> Comma() { return getTokens(LLVMParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(LLVMParser.Comma, i);
		}
		public FuncDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMParserListener ) ((LLVMParserListener)listener).enterFuncDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMParserListener ) ((LLVMParserListener)listener).exitFuncDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLVMParserVisitor ) return ((LLVMParserVisitor<? extends T>)visitor).visitFuncDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncDeclContext funcDecl() throws RecognitionException {
		FuncDeclContext _localctx = new FuncDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_funcDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(Declare);
			setState(79);
			type();
			setState(80);
			gVar();
			setState(81);
			match(LParen);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 274726916L) != 0) || _la==IntType) {
				{
				setState(82);
				type();
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Comma) {
					{
					{
					setState(83);
					match(Comma);
					setState(84);
					type();
					}
					}
					setState(89);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(92);
			match(RParen);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GVarDeclContext extends ParserRuleContext {
		public GVarContext gVar() {
			return getRuleContext(GVarContext.class,0);
		}
		public TerminalNode Assign() { return getToken(LLVMParser.Assign, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public EntityContext entity() {
			return getRuleContext(EntityContext.class,0);
		}
		public AccessTypeContext accessType() {
			return getRuleContext(AccessTypeContext.class,0);
		}
		public PreemptionsContext preemptions() {
			return getRuleContext(PreemptionsContext.class,0);
		}
		public UnnamedAddrContext unnamedAddr() {
			return getRuleContext(UnnamedAddrContext.class,0);
		}
		public GlobalHeadContext globalHead() {
			return getRuleContext(GlobalHeadContext.class,0);
		}
		public GVarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gVarDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMParserListener ) ((LLVMParserListener)listener).enterGVarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMParserListener ) ((LLVMParserListener)listener).exitGVarDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLVMParserVisitor ) return ((LLVMParserVisitor<? extends T>)visitor).visitGVarDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GVarDeclContext gVarDecl() throws RecognitionException {
		GVarDeclContext _localctx = new GVarDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_gVarDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			gVar();
			setState(95);
			match(Assign);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Private) {
				{
				setState(96);
				accessType();
				}
			}

			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Dso_preemptable || _la==Dso_local) {
				{
				setState(99);
				preemptions();
				}
			}

			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Unnamed_addr || _la==Local_unnamed_addr) {
				{
				setState(102);
				unnamedAddr();
				}
			}

			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Global || _la==Constant) {
				{
				setState(105);
				globalHead();
				}
			}

			setState(108);
			type();
			setState(109);
			entity();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncDefContext extends ParserRuleContext {
		public TerminalNode Define() { return getToken(LLVMParser.Define, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public GVarContext gVar() {
			return getRuleContext(GVarContext.class,0);
		}
		public TerminalNode LParen() { return getToken(LLVMParser.LParen, 0); }
		public TerminalNode RParen() { return getToken(LLVMParser.RParen, 0); }
		public TerminalNode LBrace() { return getToken(LLVMParser.LBrace, 0); }
		public TerminalNode RBrace() { return getToken(LLVMParser.RBrace, 0); }
		public PreemptionsContext preemptions() {
			return getRuleContext(PreemptionsContext.class,0);
		}
		public List<RegContext> reg() {
			return getRuleContexts(RegContext.class);
		}
		public RegContext reg(int i) {
			return getRuleContext(RegContext.class,i);
		}
		public List<BasicBlockContext> basicBlock() {
			return getRuleContexts(BasicBlockContext.class);
		}
		public BasicBlockContext basicBlock(int i) {
			return getRuleContext(BasicBlockContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(LLVMParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(LLVMParser.Comma, i);
		}
		public FuncDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMParserListener ) ((LLVMParserListener)listener).enterFuncDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMParserListener ) ((LLVMParserListener)listener).exitFuncDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLVMParserVisitor ) return ((LLVMParserVisitor<? extends T>)visitor).visitFuncDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncDefContext funcDef() throws RecognitionException {
		FuncDefContext _localctx = new FuncDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funcDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(Define);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Dso_preemptable || _la==Dso_local) {
				{
				setState(112);
				preemptions();
				}
			}

			setState(115);
			type();
			setState(116);
			gVar();
			setState(117);
			match(LParen);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 274726916L) != 0) || _la==IntType) {
				{
				setState(118);
				type();
				setState(119);
				reg();
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Comma) {
					{
					{
					setState(120);
					match(Comma);
					setState(121);
					type();
					setState(122);
					reg();
					}
					}
					setState(128);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(131);
			match(RParen);
			setState(132);
			match(LBrace);
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Identifier) {
				{
				{
				setState(133);
				basicBlock();
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(139);
			match(RBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassDeclContext extends ParserRuleContext {
		public DestAssignContext destAssign() {
			return getRuleContext(DestAssignContext.class,0);
		}
		public TerminalNode Type() { return getToken(LLVMParser.Type, 0); }
		public TerminalNode LBrace() { return getToken(LLVMParser.LBrace, 0); }
		public TerminalNode RBrace() { return getToken(LLVMParser.RBrace, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(LLVMParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(LLVMParser.Comma, i);
		}
		public ClassDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMParserListener ) ((LLVMParserListener)listener).enterClassDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMParserListener ) ((LLVMParserListener)listener).exitClassDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLVMParserVisitor ) return ((LLVMParserVisitor<? extends T>)visitor).visitClassDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclContext classDecl() throws RecognitionException {
		ClassDeclContext _localctx = new ClassDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			destAssign();
			setState(142);
			match(Type);
			setState(143);
			match(LBrace);
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 274726916L) != 0) || _la==IntType) {
				{
				setState(144);
				type();
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Comma) {
					{
					{
					setState(145);
					match(Comma);
					setState(146);
					type();
					}
					}
					setState(151);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(154);
			match(RBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TargetInfoContext extends ParserRuleContext {
		public SourceFnContext sourceFn() {
			return getRuleContext(SourceFnContext.class,0);
		}
		public DataLayoutContext dataLayout() {
			return getRuleContext(DataLayoutContext.class,0);
		}
		public TargetTripleContext targetTriple() {
			return getRuleContext(TargetTripleContext.class,0);
		}
		public TargetInfoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_targetInfo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMParserListener ) ((LLVMParserListener)listener).enterTargetInfo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMParserListener ) ((LLVMParserListener)listener).exitTargetInfo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLVMParserVisitor ) return ((LLVMParserVisitor<? extends T>)visitor).visitTargetInfo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TargetInfoContext targetInfo() throws RecognitionException {
		TargetInfoContext _localctx = new TargetInfoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_targetInfo);
		try {
			setState(159);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(156);
				sourceFn();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(157);
				dataLayout();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(158);
				targetTriple();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceFnContext extends ParserRuleContext {
		public TerminalNode Source_filename() { return getToken(LLVMParser.Source_filename, 0); }
		public TerminalNode Assign() { return getToken(LLVMParser.Assign, 0); }
		public TerminalNode StringData() { return getToken(LLVMParser.StringData, 0); }
		public SourceFnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceFn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMParserListener ) ((LLVMParserListener)listener).enterSourceFn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMParserListener ) ((LLVMParserListener)listener).exitSourceFn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLVMParserVisitor ) return ((LLVMParserVisitor<? extends T>)visitor).visitSourceFn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceFnContext sourceFn() throws RecognitionException {
		SourceFnContext _localctx = new SourceFnContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sourceFn);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(Source_filename);
			setState(162);
			match(Assign);
			setState(163);
			match(StringData);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DataLayoutContext extends ParserRuleContext {
		public TerminalNode Target() { return getToken(LLVMParser.Target, 0); }
		public TerminalNode Datalayout() { return getToken(LLVMParser.Datalayout, 0); }
		public TerminalNode Assign() { return getToken(LLVMParser.Assign, 0); }
		public TerminalNode StringData() { return getToken(LLVMParser.StringData, 0); }
		public DataLayoutContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataLayout; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMParserListener ) ((LLVMParserListener)listener).enterDataLayout(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMParserListener ) ((LLVMParserListener)listener).exitDataLayout(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLVMParserVisitor ) return ((LLVMParserVisitor<? extends T>)visitor).visitDataLayout(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataLayoutContext dataLayout() throws RecognitionException {
		DataLayoutContext _localctx = new DataLayoutContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dataLayout);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(Target);
			setState(166);
			match(Datalayout);
			setState(167);
			match(Assign);
			setState(168);
			match(StringData);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TargetTripleContext extends ParserRuleContext {
		public TerminalNode Target() { return getToken(LLVMParser.Target, 0); }
		public TerminalNode Triple() { return getToken(LLVMParser.Triple, 0); }
		public TerminalNode Assign() { return getToken(LLVMParser.Assign, 0); }
		public TerminalNode StringData() { return getToken(LLVMParser.StringData, 0); }
		public TargetTripleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_targetTriple; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMParserListener ) ((LLVMParserListener)listener).enterTargetTriple(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMParserListener ) ((LLVMParserListener)listener).exitTargetTriple(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLVMParserVisitor ) return ((LLVMParserVisitor<? extends T>)visitor).visitTargetTriple(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TargetTripleContext targetTriple() throws RecognitionException {
		TargetTripleContext _localctx = new TargetTripleContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_targetTriple);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(Target);
			setState(171);
			match(Triple);
			setState(172);
			match(Assign);
			setState(173);
			match(StringData);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BasicBlockContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(LLVMParser.Identifier, 0); }
		public TerminalNode Colon() { return getToken(LLVMParser.Colon, 0); }
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public BasicBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basicBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMParserListener ) ((LLVMParserListener)listener).enterBasicBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMParserListener ) ((LLVMParserListener)listener).exitBasicBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLVMParserVisitor ) return ((LLVMParserVisitor<? extends T>)visitor).visitBasicBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BasicBlockContext basicBlock() throws RecognitionException {
		BasicBlockContext _localctx = new BasicBlockContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_basicBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			match(Identifier);
			setState(176);
			match(Colon);
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 28)) & ~0x3f) == 0 && ((1L << (_la - 28)) & 212600881153L) != 0)) {
				{
				{
				setState(177);
				instruction();
				}
				}
